--- a/asp_presentaciones/Pages/Ventanas/ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/ServiciosExtras.cshtml
@@ -1,142 +1,87 @@
 ﻿@page
 @model asp_presentacion.Pages.Ventanas.ServiciosExtrasModel
 @{
-    ViewData["Titulo"] = "";
+    ViewData["Titulo"] = "Servicios Extras";
 }
-
 <center>
-    <div>
+    <div class="container mt-4">
+        <div class="text-center mb-4">
+            <img src="/Imagenes/mantenimiento.jpeg"
+                 alt="Servicios extra"
+                 style="max-width: 500px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
+            <p style="font-style: italic; font-size: small;">Servicios adicionales ofrecidos en la sede</p>
+        </div>
+
         <form method="POST" enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
-            <div align="left">
-                <h3>ServiciosExtras</h3>
+            <div class="mb-3">
+                <h3>Servicios Extras</h3>
             </div>
 
-            <div align="left" class="bt_panel_buttons">
-                <input type="submit" value="Refrescar" asp-page-handler="BtRefrescar"
-                       class="btn btn-secondary"
+            <div class="mb-4">
+                <input type="submit" value="Refrescar" asp-page-handler="BtRefrescar" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-
-                <input type="submit" value="Nuevo" asp-page-handler="BtNuevo"
-                       class="btn btn-secondary"
+                <input type="submit" value="Nuevo" asp-page-handler="BtNuevo" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-
-                <input type="submit" value="Guardar" asp-page-handler="BtGuardar"
-                       class="btn btn-secondary"
+                <input type="submit" value="Guardar" asp-page-handler="BtGuardar" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-
-                <input type="submit" value="Cancelar" asp-page-handler="BtCancelar"
-                       class="btn btn-secondary"
+                <input type="submit" value="Cancelar" asp-page-handler="BtCancelar" class="btn btn-secondary"
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
             </div>
 
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden" asp-for="Actual!.Id_ServicioExtra" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_ServicioExtra" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden" asp-for="Actual!.Id_Sede" />
-                <input type="hidden" asp-for="Actual!.Piscina" />
-                <input type="hidden" asp-for="Actual!.Restaurante" />
-                <input type="hidden" asp-for="Actual!.Limpieza" />
-                <input type="hidden" asp-for="Actual!.Mantenimiento" />
-                <input type="hidden" asp-for="Actual!.Gimnasio" />
-                <input type="hidden" asp-for="Actual!.Jacuzzi" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_Sede" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
-                <div class="containers_vn panel panel-default">
-                    <h3>Casa</h3>
-
-                    @* Campos del formulario *@
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Id_ServicioExtra</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Id_ServicioExtra" />
-                        </div>
-                    </div>
+                <div class="card p-4 mb-4 shadow-sm">
+                    <h4 class="mb-3">Nuevo Servicio Extra</h4>
 
                     <div class="form-group">
-                        <label class="col-lg-4 control-label">Id_Sede</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Id_Sede" />
-                        </div>
+                        <label for="Id_Sede">Sede</label>
+                        <select asp-for="Actual.Id_Sede" class="form-control" asp-items="@(new SelectList(Model.Sedes, "Id_Sede", "Locacion"))">
+                            <option value="">Seleccione una sede</option>
+                        </select>
                     </div>
 
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Piscina</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Piscina" />
-                        </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Restaurante</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Restaurante" />
+                    @foreach (var campo in new[] { "Piscina", "Restaurante", "Limpieza", "Mantenimiento", "Gimnasio", "Jacuzzi" })
+                    {
+                        <div class="mb-3 row">
+                            <label class="col-sm-2 col-form-label">@campo</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" asp-for="@Model.Actual!.GetType().GetProperty(campo)!.GetValue(Model.Actual)" name="Actual.@campo" />
+                            </div>
                         </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Limpieza</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Limpieza" />
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Mantenimiento</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Mantenimiento" />
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Gimnasio</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Gimnasio" />
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-lg-4 control-label">Jacuzzi</label>
-                        <div class="col-lg-6">
-                            <input class="cts_forms form-control" asp-for="Actual!.Jacuzzi" />
-                        </div>
-                    </div>
+                    }
                 </div>
             }
 
             @if (ViewData.ContainsKey("Mensaje"))
             {
-                <input type="hidden" asp-for="Accion" />
+                <input type="hidden" asp-for="@Model.Accion" />
                 @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <div class="popup">
-                    <div class="pp_del_inner">
-                        <div style="width:95%">
-                            <h2 align="left">Mensaje</h2>
-                            <h4 align="left">¿Desea borrar la entidad?</h4>
-                            <h6 align="left">
-                                @Model.Actual!.Id_ServicioExtra,
-                                @Model.Actual!.Id_Sede,
-                                @Model.Actual!.Piscina,
-                                @Model.Actual!.Restaurante,
-                                @Model.Actual!.Limpieza,
-                                @Model.Actual!.Mantenimiento,
-                                @Model.Actual!.Gimnasio,
-                                @Model.Actual!.Jacuzzi
-                            </h6>
-                            <br /><br />
-                            <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-secondary" />
+                <div class='popup'>
+                    <div class='pp_del_inner'>
+                        <div style='width:95%'>
+                            <h2>Mensaje</h2>
+                            <h4>¿Desea borrar este servicio extra?</h4>
+                            <h6>Servicio ID: @Model.Actual?.Id_ServicioExtra</h6>
+                            <br />
+                            <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-danger me-2" />
                             <input type="submit" value="Cerrar" asp-page-handler="BtCancelar" class="btn btn-secondary" />
                         </div>
                     </div>
@@ -146,48 +91,48 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input id="flNombre" class="cts_forms form-control"
-                       asp-for="Filtro!.Id_ServicioExtra"
-                       placeholder="Nombre" />
-                <br />
+                <div class="mb-3">
+                    <input id="flId_ServicioExtra"
+                           class="form-control"
+                           asp-for="@Model.Filtro!.Id_ServicioExtra"
+                           placeholder="Id Servicio Extra" />
+                </div>
 
-                <div class="containers_vn panel panel-default">
-                    <table class="tb_data table table-striped table-bordered table-hover">
+                <div class="card p-3 shadow-sm">
+                    <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
                                 <th>Id_ServicioExtra</th>
                                 <th>Id_Sede</th>
-                                <th class="cl_hidden">Piscina</th>
+                                <th>Piscina</th>
                                 <th>Restaurante</th>
                                 <th>Limpieza</th>
                                 <th>Mantenimiento</th>
-                                <th class="cl_hidden">Gimnasio</th>
+                                <th>Gimnasio</th>
                                 <th>Jacuzzi</th>
-                                <th class="cl_actions">Acciones</th>
+                                <th>Acción</th>
                             </tr>
                         </thead>
                         <tbody>
-                            @if (Model?.Lista != null)
+                            @if (Model != null && Model.Lista != null)
                             {
                                 foreach (var elemento in Model.Lista)
                                 {
                                     <tr>
                                         <td>@elemento.Id_ServicioExtra</td>
-                                        <td>@elemento.Id_Sede</td>
-                                        <td class="cl_hidden">@elemento.Piscina</td>
+                                        <td>@elemento.Sedes?.Locacion</td>
+                                        <td>@elemento.Piscina</td>
                                         <td>@elemento.Restaurante</td>
                                         <td>@elemento.Limpieza</td>
                                         <td>@elemento.Mantenimiento</td>
-                                        <td class="cl_hidden">@elemento.Gimnasio</td>
+                                        <td>@elemento.Gimnasio</td>
                                         <td>@elemento.Jacuzzi</td>
                                         <td>
-                                            <input type="submit" value="Modificar"
-                                                   asp-page-handler="BtModificar"
-                                                   class="btn btn-secondary"
+                                            <input type="submit" value="Modificar" asp-page-handler="BtModificar"
+                                                   class="btn btn-warning btn-sm me-1"
                                                    asp-route-data="@elemento.Id_ServicioExtra" />
-                                            <input type="submit" value="Borrar"
-                                                   asp-page-handler="BtBorrarVal"
-                                                   class="btn btn-secondary"
+                                            <input type="submit" value="Borrar" asp-page-handler="BtBorrarVal"
+                                                   class="btn btn-danger btn-sm"
                                                    asp-route-data="@elemento.Id_ServicioExtra" />
                                         </td>
                                     </tr>
