--- a/asp_presentaciones/Pages/Ventanas/Sedes_ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Sedes_ServiciosExtras.cshtml
@@ -1,104 +1,75 @@
 ﻿@page
 @model asp_presentacion.Pages.Ventanas.Sedes_ServiciosExtrasModel
 @{
-    ViewData["Titulo"] = "";
+    ViewData["Titulo"] = "Sedes - Servicios Extras";
 }
 <center>
-    <div>
-        <form method="POST"
-              enctype="multipart/form-data">
+    <div class="container mt-4">
+        <div class="text-center mb-4">
+            <img src="/Imagenes/servicio_extra.jpeg"
+                 alt="Servicios extra"
+                 style="max-width: 500px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
+            <p style="font-style: italic; font-size: small;">Servicios adicionales por sede</p>
+        </div>
+
+        <form method="POST" enctype="multipart/form-data">
             @Html.AntiForgeryToken()
 
-            <div align="left">
-                <h3>Sedes_ServiciosExtras</h3>
+            <div class="mb-3">
+                <h3>Sedes - Servicios Extras</h3>
             </div>
-            <div align="left"
-                 class="bt_panel_buttons">
-                <input type="submit"
-                       value="Refrescar"
-                       asp-page-handler="BtRefrescar"
-                       class="btn btn-secondary"
+
+            <div class="mb-4">
+                <input type="submit" value="Refrescar" asp-page-handler="BtRefrescar" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Nuevo"
-                       asp-page-handler="BtNuevo"
-                       class="btn btn-secondary"
+                <input type="submit" value="Nuevo" asp-page-handler="BtNuevo" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Guardar"
-                       asp-page-handler="BtGuardar"
-                       class="btn btn-secondary"
+                <input type="submit" value="Guardar" asp-page-handler="BtGuardar" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit"
-                       value="Cancelar"
-                       asp-page-handler="BtCancelar"
-                       class="btn btn-secondary"
+                <input type="submit" value="Cancelar" asp-page-handler="BtCancelar" class="btn btn-secondary"
                        disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
             </div>
 
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden"
-                       asp-for="@Model.Actual!.Id_Sedes_ServiciosExtras" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_Sedes_ServiciosExtras" />
             }
+
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input type="hidden"
-                       asp-for="@Model.Actual!.Id_Sedes_ServiciosExtras" />
-                <input type="hidden"
-                       asp-for="@Model.Actual!.Id_Sede" />
-                <input type="hidden"
-                       asp-for="@Model.Actual!.Id_ServicioExtra" />
-                <input type="hidden"
-                       asp-for="@Model.Actual!.Descuento_Sede" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_Sede" />
+                <input type="hidden" asp-for="@Model.Actual!.Id_ServicioExtra" />
+                <input type="hidden" asp-for="@Model.Actual!.Descuento_Sede" />
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
-                <div class="containers_vn panel panel-default">
-                    <h3>Casa</h3>
+                <div class="card p-4 mb-4 shadow-sm">
+                    <h4 class="mb-3">Nueva Sede - Servicio Extra</h4>
 
-                    <div>
-                        <div class="form-group">
-                            <label class="col-lg-4 control-label">
-                                Id_Sedes_ServiciosExtras
-                            </label>
-                            <div class="col-lg-6">
-                                <input id="nmEstudiante"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Id_Sedes_ServiciosExtras" />
-                            </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Sede</label>
+                        <div class="col-sm-10">
+                            <select asp-for="@Model.Actual!.Id_Sede" class="form-select" asp-items="@(new SelectList(Model.Sedes, "Id_Sede", "Locacion"))">
+                                <option value="">-- Seleccione una sede --</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <label class="col-lg-4 control-label">
-                                Id_Sede
-                            </label>
-                            <div class="col-lg-6">
-                                <input id="nmMateria"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Id_Sede" />
-                            </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Servicio Extra</label>
+                        <div class="col-sm-10">
+                            <select asp-for="@Model.Actual!.Id_ServicioExtra" class="form-select" asp-items="@(new SelectList(Model.ServiciosExtras, "Id_ServicioExtra", "Jacuzzi"))">
+                                <option value="">-- Seleccione un servicio --</option>
+                            </select>
                         </div>
-                        <div class="form-group">
-                            <label class="col-lg-4 control-label">
-                                Id_ServicioExtra
-                            </label>
-                            <div class="col-lg-6">
-                                <input id="nmNota1"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Id_ServicioExtra" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-lg-4 control-label">
-                                Descuento_Sede
-                            </label>
-                            <div class="col-lg-6">
-                                <input id="nmNota2"
-                                       class="cts_forms form-control"
-                                       asp-for="@Model.Actual!.Descuento_Sede" />
-                            </div>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label">Descuento (%)</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" asp-for="@Model.Actual!.Descuento_Sede" />
                         </div>
                     </div>
                 </div>
@@ -106,10 +77,8 @@
 
             @if (ViewData.ContainsKey("Mensaje"))
             {
-                <input type="hidden"
-                       asp-for="@Model.Accion" />
+                <input type="hidden" asp-for="@Model.Accion" />
                 @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
-                ;
             }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
@@ -117,29 +86,12 @@
                 <div class='popup'>
                     <div class='pp_del_inner'>
                         <div style='width:95%'>
-                            <h2 align="left">
-                                Mensaje
-                            </h2>
-
-                            <h4 align="left">
-                                Desea borrar la entidad?
-                            </h4>
-                            <h6 align="left">
-                                @Model.Actual!.Id_Sedes_ServiciosExtras,
-                                @Model.Actual!.Id_Sede,
-                                @Model.Actual!.Id_ServicioExtra,
-                                @Model.Actual!.Descuento_Sede
-                            </h6>
+                            <h2>Mensaje</h2>
+                            <h4>¿Desea borrar este vínculo sede - servicio extra?</h4>
+                            <h6>@Model.Actual?.Sedes?.Direccion - @Model.Actual?.ServicioExtra?.Jacuzzi</h6>
                             <br />
-                            <br />
-                            <input type="submit"
-                                   value="Borrar"
-                                   asp-page-handler="BtBorrar"
-                                   class="btn btn-secondary" />
-                            <input type="submit"
-                                   value="Cerrar"
-                                   asp-page-handler="BtCancelar"
-                                   class="btn btn-secondary" />
+                            <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-danger me-2" />
+                            <input type="submit" value="Cerrar" asp-page-handler="BtCancelar" class="btn btn-secondary" />
                         </div>
                     </div>
                 </div>
@@ -148,67 +100,48 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
             Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
-                <input Id="flNombre"
-                       class="cts_forms form-control"
-                       asp-for="@Model.Filtro!.Id_Sedes_ServiciosExtras"
-                       placeholder="Nombre" />
-                <br />
+                <div class="mb-3">
+                    <input id="flId_Sedes_ServiciosExtras"
+                           class="form-control"
+                           asp-for="@Model.Filtro!.Id_Sedes_ServiciosExtras"
+                           placeholder="Id vínculo" />
+                </div>
 
-                <div class="containers_vn panel panel-default">
-                    <table class="tb_data table table-striped table-bordered table-hover">
-                        <tr>
-                            <th>
-                                Id_Sedes_ServiciosExtras
-                            </th>
-                            <th>
-                                Id_Sede
-                            </th>
-                            <th class="cl_hidden">
-                                Id_ServicioExtra
-                            </th>
-                            <th class="cl_actions">
-                                Descuento_Sede
-                            </th>
-
-                        </tr>
-                        @if (Model != null && Model.Lista != null)
-                        {
-                            @foreach (var elemento in Model.Lista)
+                <div class="card p-3 shadow-sm">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Sede</th>
+                                <th>Servicio Extra</th>
+                                <th>Descuento (%)</th>
+                                <th>Acción</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @if (Model != null && Model.Lista != null)
                             {
-                                <tr>
-                                    <td>
-                                        @elemento.Id_Sedes_ServiciosExtras
-
-                                    </td>
-                                    <td>
-                                        @elemento.Id_Sede
-
-                                    </td>
-                                    <td class="cl_hidden">
-                                        @elemento.Id_ServicioExtra
-
-                                    </td>
-                                    <td class="cl_hidden">
-                                        @elemento.Descuento_Sede
-                                    </td>
-                                    <td>
-                                        <input type="submit"
-                                               value="Modicar"
-                                               asp-page-handler="BtModificar"
-                                               class="btn btn-secondary"
-                                               asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
-                                        <input type="submit"
-                                               value="Borrar"
-                                               asp-page-handler="BtBorrarVal"
-                                               class="btn btn-secondary"
-                                               asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
-                                    </td>
-                                </tr>
+                                foreach (var elemento in Model.Lista)
+                                {
+                                    <tr>
+                                        <td>@elemento.Id_Sedes_ServiciosExtras</td>
+                                        <td>@elemento.Sedes?.Direccion</td>
+                                        <td>@elemento.ServicioExtra?.Jacuzzi</td>
+                                        <td>@elemento.Descuento_Sede</td>
+                                        <td>
+                                            <input type="submit" value="Modificar" asp-page-handler="BtModificar"
+                                                   class="btn btn-warning btn-sm me-1"
+                                                   asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
+                                            <input type="submit" value="Borrar" asp-page-handler="BtBorrarVal"
+                                                   class="btn btn-danger btn-sm"
+                                                   asp-route-data="@elemento.Id_Sedes_ServiciosExtras" />
+                                        </td>
+                                    </tr>
+                                }
                             }
-                        }
+                        </tbody>
                     </table>
                 </div>
             }
         </form>
     </div>
-</center>
