--- a/asp_presentaciones/Pages/Ventanas/Sedes.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Sedes.cshtml
@@ -6,7 +6,7 @@
 <center>
     <div class="container mt-4">
         <div class="text-center mb-4">
-            <img src="/Imagenes/sede.jpeg"
+            <img src="/Imagenes/hotel.jpeg"
                  alt="Sede representativa"
                  style="max-width: 500px; height: auto; border: 10px solid #ccc; border-radius: 10px;" />
             <p style="font-style: italic; font-size: small;">Sedes Hoteleras</p>
